--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,12 @@ source:
 build:
   number: 1
   noarch: python
-  script: python setup.py install --single-version-externally-managed --record=record.txt
-
+  script: "{{ PYTHON }} -m pip install . -vv"
+  
 requirements:
   host:
     - python {{ python_min }}
+    - pip
     - setuptools
   run:
     - python >={{ python_min }}
